fix z-index

--- a/static/style.css
+++ b/static/style.css
@@ -146,7 +146,7 @@ header .container {
         top: 0;
         left: 0;
         right: 0;
-        z-index: 1;
+        z-index: 2;
         gap: 30px;
         height: 100%;
         padding-left: 5%;
@@ -211,7 +211,7 @@ header .container {
     position: absolute;
     background-color: #282828;
     min-width: 160px;
-    z-index: 1;
+    z-index: 2;
     color: white;
 }
 
@@ -251,7 +251,7 @@ header .container {
     position: fixed;
     height: fit-content;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 
 @media screen and (min-width: 1000px) {
